# dataclass-ext

./: LICENSE  README.md  pyproject.toml
src/dataclass_ext/: dataclass.py  db.py
tests/: test_dataclass.py
